# sen2agri-processors

./: .gitignore  CMakeLists.txt  README.md
Common/: CMakeLists.txt
Common/ComputeConfusionMatrixMulti/: CMakeLists.txt
Common/CropMaskImageClassifier/: CropMaskImageClassifier.cpp
Common/CropMaskTrainImagesClassifier/: otbTrainImagesClassifier.cxx
Common/CropTypeImageClassifier/: CropTypeImageClassifier.cpp
Common/CropTypeTrainImagesClassifier/: otbTrainImagesClassifier.cxx
Common/Filters/: CropMaskFeaturesSupervised.hxx  DataSmoothingFilter.h
Common/NDVISeries/: NDVISeries.cpp
Common/OTBExtensions/: otbGridResampleImageFilter.txx
Common/TimeSeriesReader/: TimeSeriesReader.cpp  TimeSeriesReader.h
Common/TrainImagesClassifierNew/: CTestTestfile.cmake  Makefile  otbTrainDecisionTree.cxx  otbTrainGradientBoostedTree.cxx  otbTrainImagesClassifier.cxx  otbTrainImagesClassifier.h  otbTrainNeuralNetwork.cxx  otbTrainRandomForests.cxx
Common/Utils/include/: ResamplingBandExtractor.h
Common/XMLStatistics/: XMLStatistics.cpp
CropMask/: CMakeLists.txt
CropMask/DataSmoothing/: CMakeLists.txt
CropMask/Erosion/: Erosion.cpp
CropMask/PrincipalComponentAnalysis/: PrincipalComponentAnalysis.cpp
CropMask/SpectralFeaturesExtraction/: SpectralFeaturesExtraction.cpp
CropMask/Trimming/: Trimming.cpp
CropType/: CMakeLists.txt
CropType/QualityFlagsExtractor/: CMakeLists.txt  QualityFlagsExtractor.cpp
CropType/SampleSelection/: CMakeLists.txt  SampleSelection.cpp
scripts/: CropMaskFused.py  CropTypeFused.py  sen2agri_common.py  validity_checker.py
(+25 files in other folders)
